--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.popt=8081
+server.port=8081
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing-app
 spring.datasource.username=postgres
@@ -15,11 +15,10 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 keycloak.realm=cydeo-dev
-keycloak.auth-server-url==http://localhost:8080/auth
+keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=ticketing-app
 keycloak.credentials.secret=Fe1he73gh1pqAAaiSKthSDMzYb8y96OS
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.main.allow-circular-references=true
-
