Log SLF4J Log4j2

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -26,17 +26,19 @@ loggers=rolling
 
 #defining rootLogger (console)
 #log level
-rootLogger.level=DEBUG
+rootLogger.level=debug
 #appender used
 rootLogger.appenderRefs=console
-#name of appender
+#exact name of appender
 rootLogger.appenderRef.console.ref=STDOUT
 
 #create new file if size is reached (roll)
 appender.rolling.type=RollingFile
 appender.rolling.name=ROLLINGLOGFILE
 appender.rolling.fileName=${path}/rolling_app.log
-appender.rolling.filePattern=${path}/rolling_app%d{yyyy-MM-dd HH:mm}.log
+#appender.rolling.filePattern=${path}/rolling_app%d{yyyy-MM-dd HH:mm} - do not work in Windows
+#use something like this
+appender.rolling.filePattern=${path}/rolling_app%d{yyyy-MM-dd HH-mm-ss}.log
 appender.rolling.layout.type=PatternLayout
 appender.rolling.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
@@ -45,7 +47,7 @@ appender.rolling.policies.type=Policies
 #size based policy
 appender.rolling.policies.size.type=SizeBasedTriggeringPolicy
 #our max size
-appender.rolling.policies.size.size=2Kb
+appender.rolling.policies.size.size=2KB
 #most used rollover strategy
 appender.rolling.strategy.type=DefaultRolloverStrategy
 
@@ -55,5 +57,5 @@ logger.rolling.name=com.cydeo.aspect
 logger.rolling.level=INFO
 #which appender to use
 logger.rolling.appenderRefs=rolling
-#name of appender
+#exact name of appender
 logger.rolling.appenderRef.file.ref=ROLLINGLOGFILE
